--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         <div class="container header-container">
             <div class="logo">
                 <i class="fas fa-mug-hot" style="margin-right:8px;color:var(--gold);"></i>
-                Pâtisserie <span>Marrakech</span>
+                Pâtisserie <span>sweet touch</span>
             </div>
             <nav>
                 <ul>
@@ -507,7 +507,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <h3>Pâtisserie Marrakech</h3>
+                    <h3>Pâtisserie sweet touch</h3>
                     <p>Depuis 1972, spécialistes des pâtisseries marocaines et gâteaux modernes faits maison.</p>
                     <div class="social-icons">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -527,7 +527,7 @@
                 <div class="footer-column">
                     <h3>Contact</h3>
                     <ul>
-                        <li>📧 contact@patisseriemarrakech.ma</li>
+                        <li>📧 contact@patisseriesweettouch.ma</li>
                         <li>📞 +212 6 12 34 56 78</li>
                         <li>📍 Rue de la Koutoubia, Marrakech</li>
                         <li>🕒 8h - 22h / 7j/7</li>
@@ -535,7 +535,7 @@
                 </div>
             </div>
             <div class="copyright">
-                © 2025 Pâtisserie Marrakech — Tous droits réservés.
+                © 2025 Pâtisserie sweettouch — Tous droits réservés.
             </div>
         </div>
     </footer>
